@@ -5,8 +5,9 @@
 <p>
 
 With LilyPond we have tried to make engraving available for everyone,
-but what does that mean in practice? In other word, what can you do
+but what does that mean in practice? In other words, what can you do
 with it?
+
 <p>
 
 
@@ -56,7 +57,7 @@ collection of music, typeset in LilyPond.
 
 All the music on Mutopia is in the  public domain, so you can download and
 print it without costs. If you're not satisfied, add other fingerings,
-transpose it, or use it in your own compositions. 
+transpos it, or use it in your own compositions. 
 
 
 <h3>Print databases</h3>
