@@ -1,3 +1,7 @@
+2003-08-04  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
+
+	* site/about/screenshots.html: move to switch/howto.html
+
 2003-08-02  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
 
 	* format-page.py (one_tab): add > before Home. Setup commit
